Fix HTML formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 <h2>Our Clinic</h2>
 
 <div class="gallery">
-  <img src="images/clinic1.jpg" alt="Dental clinic in Wagholi">
-  <img src="images/clinic2.jpg" alt="Elite Smiles dental interior">
+  <img src="clinic1.jpg" alt="Dental clinic in Wagholi">
+  <img src="clinic2.jpg"> alt="Elite Smiles dental interior">
 </div>
 </section>
 
@@ -128,4 +128,5 @@ loading="lazy">
 
 </body>
 </html>
+
 
