--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="hero-image">
-    <img src="images/doctor.jpg" alt="Dentist in Wagholi">
+    <img src="images/doctor.png" alt="Dentist in Wagholi">
   </div>
 
 </section>
@@ -76,10 +76,15 @@
 <section class="section light">
 <h2>Our Clinic</h2>
 
-<div class="gallery">
-  <img src="clinic1.jpg" alt="Dental clinic in Wagholi">
-  <img src="clinic2.jpg"> alt="Elite Smiles dental interior">
+<div class="slider">
+  <img class="slide active" src="images/clinic1.jpg">
+  <img class="slide" src="images/clinic2.jpg">
+  <img class="slide" src="images/doctor.png">
+
+  <button class="prev">❮</button>
+  <button class="next">❯</button>
 </div>
+
 </section>
 
 <!-- REVIEWS -->
@@ -126,7 +131,7 @@ loading="lazy">
 <!-- FLOATING WHATSAPP -->
 <a class="whatsapp-float" href="https://wa.me/918097263177" target="_blank">💬</a>
 
+<script src="script.js"></script>
 </body>
 </html>
-
 
