--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Best Dentist in Wagholi | Elite Smiles Dental Clinic</title>
 
-<title>Best Dentist in Wagholi | Elite Smiles Dental Clinic</title>
+  <meta name="description" content="Elite Smiles Dental Clinic in Wagholi offers braces, aligners, crowns and dentures. Trusted by 108+ happy patients.">
+  <meta name="keywords" content="Dentist in Wagholi, Dental Clinic Pune, Braces Wagholi, Aligners Pune">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="description" content="Elite Smiles Dental Clinic in Wagholi offers braces, aligners, crowns, dentures and family dental care. Rated 5 stars by 108 patients.">
-<meta name="keywords" content="Dentist in Wagholi, Dental Clinic Kharadi, Braces Pune, Aligners Wagholi, Best Dentist Pune">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link rel="stylesheet" href="style.css">
-<link rel="icon" href="images/logo.png">
-
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,7 +15,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="logo">
-    <img src="images/logo.png">
+    <img src="images/logo.png" alt="Elite Smiles Logo" height="40">
     <div>
       <strong>Elite Smiles</strong>
       <span>Dental Clinic</span>
@@ -32,16 +29,13 @@
 <section class="hero">
 
   <div class="hero-text">
-
-    <div class="rating">
-      ⭐⭐⭐⭐⭐ 5.0 • 108 Reviews
-    </div>
+    <div class="rating">⭐⭐⭐⭐⭐ 5.0 • 108 Reviews</div>
 
     <h1>Your Smile, <span>Our Passion</span></h1>
 
     <p>
-      Elite Smiles Dental Clinic provides affordable, gentle dental care in 
-      Wagholi and Upper Kharadi. Trusted by families for braces, aligners, crowns and dentures.
+      Elite Smiles Dental Clinic provides affordable, gentle dental care in Wagholi and Upper Kharadi.
+      Trusted by families for braces, aligners, crowns and dentures.
     </p>
 
     <div class="buttons">
@@ -50,7 +44,6 @@
     </div>
 
     <p class="location">📍 Vihaan Park, Ubale Nagar, Wagholi, Pune</p>
-
   </div>
 
   <div class="hero-image">
@@ -61,74 +54,73 @@
 
 <!-- SERVICES -->
 <section id="services" class="section">
-<h2>Our Dental Services</h2>
+  <h2>Our Dental Services</h2>
 
-<div class="grid">
-  <div class="card">Clear Aligners</div>
-  <div class="card">Ceramic Braces</div>
-  <div class="card">Metal Braces</div>
-  <div class="card">Dental Crowns</div>
-  <div class="card">Complete Dentures</div>
-</div>
+  <div class="grid">
+    <div class="card">Clear Aligners</div>
+    <div class="card">Ceramic Braces</div>
+    <div class="card">Metal Braces</div>
+    <div class="card">Dental Crowns</div>
+    <div class="card">Complete Dentures</div>
+  </div>
 </section>
 
-<!-- CLINIC GALLERY -->
+<!-- IMAGE SLIDER -->
 <section class="section light">
-<h2>Our Clinic</h2>
+  <h2>Our Clinic</h2>
 
-<div class="slider">
-  <img class="slide active" src="images/clinic1.jpg">
-  <img class="slide" src="images/clinic2.jpg">
-  <img class="slide" src="images/doctor.png">
+  <div class="slider">
+    <img class="slide active" src="images/clinic1.jpg" alt="Dental clinic Wagholi">
+    <img class="slide" src="images/clinic2.jpg" alt="Elite Smiles Interior">
+    <img class="slide" src="images/doctor.png" alt="Doctor at clinic">
 
-  <button class="prev">❮</button>
-  <button class="next">❯</button>
-</div>
-
+    <button class="prev">❮</button>
+    <button class="next">❯</button>
+  </div>
 </section>
 
 <!-- REVIEWS -->
 <section class="section reviews">
-<h2>What Our Patients Say ❤️</h2>
+  <h2>What Our Patients Say ❤️</h2>
 
-<div class="reviews-grid">
-  <div class="review-card">
-    <div class="stars">⭐⭐⭐⭐⭐</div>
-    <p>"Good nature of staff and Doctor, happy with the service provided."</p>
-    <h4>– Verified Patient</h4>
-  </div>
+  <div class="reviews-grid">
 
-  <div class="review-card">
-    <div class="stars">⭐⭐⭐⭐⭐</div>
-    <p>"Trust worthy, affordable rates and right treatment is given."</p>
-    <h4>– Local Resident</h4>
-  </div>
+    <div class="review-card">
+      <div class="stars">⭐⭐⭐⭐⭐</div>
+      <p>"Good nature of staff and Doctor, happy with the service provided."</p>
+      <h4>– Verified Patient</h4>
+    </div>
 
-  <div class="review-card">
-    <div class="stars">⭐⭐⭐⭐⭐</div>
-    <p>"Overall, a truly positive and reassuring experience!"</p>
-    <h4>– Happy Family</h4>
+    <div class="review-card">
+      <div class="stars">⭐⭐⭐⭐⭐</div>
+      <p>"Trust worthy, affordable rates and right treatment is given."</p>
+      <h4>– Local Resident</h4>
+    </div>
+
+    <div class="review-card">
+      <div class="stars">⭐⭐⭐⭐⭐</div>
+      <p>"Overall, a truly positive and reassuring experience!"</p>
+      <h4>– Happy Family</h4>
+    </div>
+
   </div>
-</div>
 </section>
 
 <!-- GOOGLE MAP -->
 <section class="section light">
-<h2>Find Us on Google Maps</h2>
+  <h2>Find Us</h2>
 
-<iframe 
-src="https://www.google.com/maps?q=Elite+Smiles+Dental+Clinic+Wagholi&output=embed"
-loading="lazy">
-</iframe>
-
+  <iframe
+    src="https://www.google.com/maps?q=Elite+Smiles+Dental+Clinic+Wagholi&output=embed"
+    loading="lazy">
+  </iframe>
 </section>
 
-<!-- FOOTER -->
 <footer>
-<p>Elite Smiles Dental Clinic | Dentist in Wagholi | 📞 08097263177</p>
+  <p>Elite Smiles Dental Clinic • Wagholi • 📞 08097263177</p>
 </footer>
 
-<!-- FLOATING WHATSAPP -->
+<!-- WHATSAPP BUTTON -->
 <a class="whatsapp-float" href="https://wa.me/918097263177" target="_blank">💬</a>
 
 <script src="script.js"></script>
