--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="logo">
-    <img src="images/logo.png" alt="Elite Smiles Logo" height="40">
+    <img src="logo.png" alt="Elite Smiles Logo" height="40">
     <div>
       <strong>Elite Smiles</strong>
       <span>Dental Clinic</span>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="hero-image">
-    <img src="images/doctor.png" alt="Dentist in Wagholi">
+    <img src="doctor.png" alt="Dentist in Wagholi">
   </div>
 
 </section>
@@ -70,9 +70,9 @@
   <h2>Our Clinic</h2>
 
   <div class="slider">
-    <img class="slide active" src="images/clinic1.jpg" alt="Dental clinic Wagholi">
-    <img class="slide" src="images/clinic2.jpg" alt="Elite Smiles Interior">
-    <img class="slide" src="images/doctor.png" alt="Doctor at clinic">
+    <img class="slide active" src="clinic1.jpg" alt="Dental clinic Wagholi">
+    <img class="slide" src="clinic2.jpg" alt="Elite Smiles Interior">
+    <img class="slide" src="doctor.png" alt="Doctor at clinic">
 
     <button class="prev">❮</button>
     <button class="next">❯</button>
@@ -126,4 +126,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
